--- a/public/assets/locales/ru/translation.json
+++ b/public/assets/locales/ru/translation.json
@@ -23,5 +23,6 @@
 	"cart_title": "Ваш заказ",
 	"cart_btn": "Редактировать",
 	"cart_decline": "Пожалуйста, заполните все необходимые поля.",
-	"cart_success": "Ваши товары отправлены"
+	"cart_success": "Ваши товары отправлены",
+	"cart_error": "Заказ на ваш аккаунт уже существует"
 }
