--- a/public/assets/locales/en/translation.json
+++ b/public/assets/locales/en/translation.json
@@ -7,7 +7,7 @@
 	"filter_label": "Manufacturers",
 	"filter_placeholder": "Select",
 
-	"card_modal": "See more",
+	"card_modal": "More",
 	"card_add": "Add",
 
 	"modal_price": "Price: ",
