--- a/public/assets/locales/ro/translation.json
+++ b/public/assets/locales/ro/translation.json
@@ -7,7 +7,7 @@
 	"filter_label": "Producătorii",
 	"filter_placeholder": "Selectați",
 
-	"card_modal": "Vezi mai mult",
+	"card_modal": "Mai mult",
 	"card_add": "Adăuga",
 
 	"modal_price": "Preț: ",
