--- a/public/assets/locales/ru/translation.json
+++ b/public/assets/locales/ru/translation.json
@@ -7,7 +7,7 @@
 	"filter_label": "Производители",
 	"filter_placeholder": "Выберите",
 
-	"card_modal": "Узнать больше",
+	"card_modal": "Подробнее",
 	"card_add": "Добавить",
 
 	"modal_price": "Цена: ",
