--- a/public/assets/locales/ru/translation.json
+++ b/public/assets/locales/ru/translation.json
@@ -22,6 +22,7 @@
 
 	"cart_title": "Ваш заказ",
 	"cart_btn": "Редактировать",
+	"cart_order": "Подтверждение Заказа",
 	"cart_decline": "Пожалуйста, заполните все необходимые поля.",
 	"cart_success": "Ваши товары отправлены",
 	"cart_error": "Заказ на ваш аккаунт уже существует"
