--- a/public/assets/locales/ru/translation.json
+++ b/public/assets/locales/ru/translation.json
@@ -9,6 +9,7 @@
 
 	"card_modal": "Подробнее",
 	"card_add": "Добавить",
+	"card_chip": "Распродано",
 
 	"modal_price": "Цена: ",
 	"modal_sku": "Артикул: ",
