--- a/public/assets/locales/ro/translation.json
+++ b/public/assets/locales/ro/translation.json
@@ -4,17 +4,20 @@
 	"tg_buy": "Cumpără ",
 	"tg_order": "Ordin",
 
-	"filter_label": "Producătorii",
-	"filter_placeholder": "Selectați",
-
-	"card_modal": "Mai mult",
 	"card_add": "Adăuga",
 	"card_chip": "Epuizat",
 
-	"modal_price": "Preț: ",
-	"modal_sku": "SKU: ",
-	"modal_amount": "Cantitate: ",
-	"modal_manufacturer": "Producător: ",
+	"tabECigs": "e-Cigs",
+	"tabLiquid": "Lichid",
+
+	"search": "Căutare",
+	"back_button": "Înapoi",
+
+	"description": "Descriere: ",
+	"sku": "SKU: ",
+	"quantity": "Cantitate: ",
+	"manufacturer": "Producător: ",
+	"volume": "Volum: ",
 
 	"form_name": "Nume",
 	"form_phone": "Telefon",
@@ -23,6 +26,8 @@
 
 	"cart_title": "Comanda dumneavoastră",
 	"cart_btn": "Editați",
+	"cart_total": "Preț total: ",
+
 	"cart_order": "Confirmare Comandă",
 	"cart_decline": "Vă rugăm să completați toate câmpurile necesare.",
 	"cart_success": "Produsele dvs. au fost trimise",
