--- a/public/assets/locales/ru/translation.json
+++ b/public/assets/locales/ru/translation.json
@@ -28,6 +28,8 @@
 	"cart_title": "Ваш заказ",
 	"cart_btn": "Редактировать",
 	"cart_total": "Итоговая цена: ",
+	"cart_promo": "Промокод",
+	"cart_gift": "За покупку 4 шт вы получаете 1 шт в подарок",
 
 	"cart_order": "Подтверждение Заказа",
 	"cart_decline": "Пожалуйста, заполните все необходимые поля.",
