--- a/public/assets/locales/ro/translation.json
+++ b/public/assets/locales/ro/translation.json
@@ -30,6 +30,7 @@
 	"cart_total": "Preț total: ",
 	"cart_promo": "Cod promoțional",
 	"cart_gift": "Pentru achizitionarea a 4 bucati primesti 1 bucata cadou",
+	"cart_points": "Folosește puncte",
 
 	"cart_order": "Confirmare Comandă",
 	"cart_decline": "Vă rugăm să completați toate câmpurile necesare.",
