--- a/public/assets/locales/ru/translation.json
+++ b/public/assets/locales/ru/translation.json
@@ -30,6 +30,7 @@
 	"cart_total": "Итоговая цена: ",
 	"cart_promo": "Промокод",
 	"cart_gift": "За покупку 4 шт вы получаете 1 шт в подарок",
+	"cart_points": "Использовать поинты",
 
 	"cart_order": "Подтверждение Заказа",
 	"cart_decline": "Пожалуйста, заполните все необходимые поля.",
